# arango-bronze-simulated-injector

./: .gitignore  README.md  app.py  app.yaml  databricks.yml  deploy_app.sh  pyproject.toml  requirements.txt  update_arango_bronze_simulated_injector_registry_uc.sh
datasets/DARPA_Transparent_Computing/: README.md
datasets/Elliptic_and_Elliptic++/: README.md
resources/: bronze_injector.app.yml
src/: wsgi.py
src/bronze_injector/: __init__.py  app.py  config.py
src/bronze_injector/routes/: api.py
src/bronze_injector/services/: data_uploader.py  databricks_sql.py  dataset_loader.py  demo_tables_registry.py  injector_uc_registry.py  playback.py  playback_state.py  table_ref.py
