[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "arango-bronze-injector"
version = "0.1.0"
description = "Simulated bronze data injector (dataset load + playback) for Databricks demos."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "flask>=3.0.0",
  "gunicorn>=21.2.0",
  "databricks-sdk>=0.74.0",
  "pandas>=2.0.0",
  "requests>=2.28.0",
]

[tool.setuptools.packages.find]
where = ["src"]
